--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 /*Parallax effect for background*/
 .parallax {
     background-image: url(images/Background.png);
