--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,31 @@ padding: 10px;
 .navBar li a:hover {
     color: rgb(162, 177, 177);
 }
+/*Tabs*/
+.tabs {
+    overflow: hidden;
+    background-color: #ffffff;
+}
+
+.tabs button {
+    background-color: inherit;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+.tabs button:hover {
+    color: green;
+  }
+  
+/* Create an active/current tablink class */
+.tabs button.active {
+    color: green;
+  }
+  
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+  }
