--- a/styles.css
+++ b/styles.css
@@ -7,39 +7,12 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
-/* Navigation */
-.navBar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    margin-bottom: 20px;
-    background-color: rgba(160, 160, 160, 0.1);
-    border-radius: 20px;
-    position: fixed;
-    /*filter: blur(4px);
-    -webkit-filter: blur(4px);*/
-    color: azure;
+/*Navbar*/
+nav {
+    background-color: #ffffff88;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 }
-
-.navBar ul {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-}
-.navBar li {
-    float: left;
-}
-.navBar li a {
-display: block;
-text-align: center;
-color: azure;
-padding: 10px;
-}
-.navBar li a:hover {
-    color: rgb(162, 177, 177);
-}
-
 /*Tabs*/
 .tabs {
     overflow: hidden;
