Trying to make navbar fade in

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,22 @@ nav {
     -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
 }
+@keyframes fadeInOpacity {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+    .fade {
+        opacity: 1;
+        animation-name: fadeInOpacity;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in;
+        animation-duration: 2s;
+    }
 /*Tabs*/
 .tabs {
     overflow: hidden;
