Tried to fix navbar showing on top

--- a/styles.css
+++ b/styles.css
@@ -12,23 +12,8 @@ nav {
     background-color: #ffffff88;
     -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
+    transition: top .5s;
 }
-@keyframes fadeInOpacity {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-    .fade {
-        opacity: 1;
-        animation-name: fadeInOpacity;
-        animation-iteration-count: 1;
-        animation-timing-function: ease-in;
-        animation-duration: 2s;
-    }
 /*Tabs*/
 .tabs {
     overflow: hidden;
