--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ html {
 }
 /*Navbar*/
 nav {
+    top: -300px;
     background-color: #efefef88;
     -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
