--- a/styles.css
+++ b/styles.css
@@ -39,4 +39,22 @@ nav {
 .tabs button.active {
     color: rgb(48, 148, 106);
 }
+
+.tabs2 {
+    overflow: hidden;
+    background-color: #ffffff;
+}
+.tabs2 button {
+    background-color: inherit;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.tabs2 button:hover {
+    color: rgb(134, 239, 172);
+}
+  
+/* Active tab*/
+.tabs2 button.active {
+    color: rgb(48, 148, 106);
+}
   
