--- a/styles.css
+++ b/styles.css
@@ -51,12 +51,44 @@ nav {
 }
 /*More tabs*/
 .fullscreen {
-    overflow: hidden;
+    /*overflow: hidden;*/
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    background-color: #000000;
+    background-color: #000000aa;
+    overflow-x: hidden;
+    transition: 0.5s;
 }
-.fullscreen button {
-    background-color: inherit;
-    cursor: pointer;
-    transition: 0.3s;
+.fullscreen-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    background-color: #ffffff;
+}
+.fullscreen p {
+    padding: 8px;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+}
+.fullscreen .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+@media screen and (max-height: 450px) {
+    .fullscreen a {font-size: 20px}
+    .fullscreen .closebtn {
+      font-size: 40px;
+      top: 15px;
+      right: 35px;
+    }
 }
 
   
