--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,6 @@ nav {
 .tabs button.active {
     color: rgb(48, 148, 106);
 }
-
-.tabHeader {
-    height: 100%;
-}
 /*More tabs*/
 .fullscreen {
     /*overflow: hidden;*/
@@ -82,6 +78,7 @@ nav {
     right: 45px;
     font-size: 60px;
 }
+/*
 @media screen and (max-height: 450px) {
     .fullscreen a {font-size: 20px}
     .fullscreen .closebtn {
@@ -89,6 +86,6 @@ nav {
       top: 15px;
       right: 35px;
     }
-}
+}*/
 
   
