--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ nav {
     -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
     transition: top .5s;
+    z-index: 5;
 }
 /*Tabs*/
 .tabs {
@@ -45,8 +46,9 @@ nav {
 .tabs button.active {
     color: rgb(48, 148, 106);
 }
-#overlay {
+#overlay1 {
     position: fixed;
+    /*overflow-x: hidden;*/
     display: none;
     width: 100%;
     height: 100%;
@@ -60,6 +62,37 @@ nav {
     z-index: 1;
     cursor: pointer;
     transition: 0.3s;
-  }
-
-  
+}
+#overlay2 {
+    position: fixed;
+    /*overflow-x: hidden;*/
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.1);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
+    z-index: 1;
+    cursor: pointer;
+}
+#overlay3 {
+    position: fixed;
+    /*overflow-x: hidden;*/
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.1);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
+    z-index: 1;
+    cursor: pointer;
+    transition: 0.3s;
+}  
