--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ nav {
 }
 #overlay1 {
     position: fixed;
-    /*overflow-x: hidden;*/
+    overflow-x: hidden;
     display: none;
     width: 100%;
     height: 100%;
@@ -56,7 +56,7 @@ nav {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(0,0,0,0.3);
     -webkit-backdrop-filter: blur(4px);
     backdrop-filter: blur(4px);
     z-index: 1;
@@ -74,8 +74,8 @@ nav {
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.1);
-    -webkit-backdrop-filter: blur(4px);
-    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
     z-index: 1;
     cursor: pointer;
 }
