--- a/styles.css
+++ b/styles.css
@@ -59,13 +59,13 @@ nav {
     background-color: rgba(0,0,0,0.3);
     -webkit-backdrop-filter: blur(4px);
     backdrop-filter: blur(4px);
-    z-index: 1;
+    z-index: 2;
     cursor: pointer;
-    transition: 0.3s;
+    transition: -webkit-backdrop-filter 2s;
 }
 #overlay2 {
     position: fixed;
-    /*overflow-x: hidden;*/
+    /*overflow-x: hidden; <---- Scroll in overlay*/
     display: none;
     width: 100%;
     height: 100%;
@@ -76,7 +76,7 @@ nav {
     background-color: rgba(0,0,0,0.1);
     -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
-    z-index: 1;
+    z-index: 2;
     cursor: pointer;
 }
 #overlay3 {
@@ -92,7 +92,7 @@ nav {
     background-color: rgba(0,0,0,0.1);
     -webkit-backdrop-filter: blur(4px);
     backdrop-filter: blur(4px);
-    z-index: 1;
+    z-index: 2;
     cursor: pointer;
     transition: 0.3s;
 }  
