--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ nav {
 }
 #overlay1 {
     position: fixed;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     display: none;
     width: 100%;
     height: 100%;
