--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,6 @@ html {
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
 }
 /*
 .blurred-img {
@@ -39,64 +35,13 @@ nav {
     overflow: hidden;
 }
 
-.tabs button {
+/* .tabs button {
     background-color: inherit;
     cursor: pointer;
     transition: 0.3s;
 }
 .tabs button:hover {
     color: rgb(234, 179, 8);
-}
+} */
   
-/* Active tab*/
-.tabs button.active {
-    color: rgb(157, 23, 77);
-}
-#overlay1 {
-    position: fixed;
-    overflow-x: hidden;
-    display: none;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.3);
-    /* -webkit-backdrop-filter: blur(4px);
-    backdrop-filter: blur(4px); */
-    z-index: 2;
-    cursor: pointer;
-}
-#overlay2 {
-    position: fixed;
-    overflow-x: hidden;
-    display: none;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.3);
-    /* -webkit-backdrop-filter: blur(4px);
-    backdrop-filter: blur(4px); */
-    z-index: 2;
-    cursor: pointer;
-}
-#overlay3 {
-    position: fixed;
-    overflow-x: hidden;
-    display: none;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.3);
-    /* -webkit-backdrop-filter: blur(4px);
-    backdrop-filter: blur(4px); */
-    z-index: 2;
-    cursor: pointer;
-}  
+
