--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,14 @@ html {
 }
 
 /*Parallax effect for background*/
-.parallax {
+/* .parallax {
     background-image: url(images/Background.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
-}
-/*
-.blurred-img {
-    opacity: 100;
-}*/
-.blur {
-    -webkit-backdrop-filter: blur(8px);
-    backdrop-filter: blur(8px);
-}
+} */
+
 /*Navbar*/
 nav {
     top: -150px;
@@ -30,18 +23,8 @@ nav {
     transition: top .5s;
     /* z-index: 5; */
 }
-/*Tabs*/
-.tabs {
-    overflow: hidden;
-}
 
-/* .tabs button {
-    background-color: inherit;
-    cursor: pointer;
-    transition: 0.3s;
+.tabs button.active {
+    color: rgb(157, 23, 77);
 }
-.tabs button:hover {
-    color: rgb(234, 179, 8);
-} */
-  
 
