--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html {
-    scroll-behavior: smooth;
-}
-
-/*Parallax effect for background*/
-/* .parallax {
-    background-image: url(images/Background.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-} */
 
 /*Navbar*/
 nav {
     top: -150px;
-    /* background-color: rgba(239, 239, 239, 0.533); */
-    /* -webkit-backdrop-filter: blur(8px);
-    backdrop-filter: blur(8px); */
     transition: top .5s;
-    /* z-index: 5; */
 }
 
 .tabs button.active {
     color: rgb(157, 23, 77);
 }
-
+/* For dark mode button */
+#toggle:checked ~ label div.toggle-dot {
+    @apply translate-x-3;
+}
