--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,9 @@ nav {
 }
 
 .tabs button.active {
-    color: rgb(157, 23, 77);
+    color: rgb(162, 28, 175);
 }
 /* For dark mode button */
-#toggle:checked ~ label div.toggle-dot {
+/* #toggle:checked ~ label div.toggle-dot {
     @apply translate-x-3;
-}
+} */
